See: http://github.com/lidaobing/chmsee/commits/master