@@ -1,4 +1,6 @@
 Ji YongGang <jungleji@gmail.com>
+
+-- 1.0.3 -> 1.0.7 --
 LI Daobing <lidaobing@gmail.com>
 
 -- Before 0.9.6 --
