@@ -1,16 +1,20 @@
+Introduction
+============
+
 ChmSee is an HTML Help viewer for Unix/Linux. It is based on CHMLIB
-and use GTK+ as frontend toolkit. Because of using gecko HTML
+and use GTK+ as its frontend toolkit. Because of using gecko HTML
 rendering engine, ChmSee can support rich features of modern HTML
-page, such as CSS and JavaScript.
+page, specially CSS.
 
 Homepage: http://code.google.com/p/chmsee
-
 
 Dependencies
 ============
 
-Compile ChmSee from source you need following packages:
- * cmake >= 2.6(maybe need 2.8, I only tested with 2.8)
+Compile ChmSee from source, the following packages should have been
+installed on your system:
+
+ * cmake >= 2.8
  * gtk2 >= 2.16
  * xulrunner >= 1.9
  * chmlib
@@ -27,17 +31,18 @@ $ cmake ../chmsee-$VERSION
 $ make
 # make install
 
+Source repository
+=================
+
+You can use git command to retrive develping ChmSee code:
+
+$ git clone git://github.com/jungleji/chmsee.git
+
 Report bug
 ==========
 
-If you find any problem, please commit bug report to
+If you encounter any problem, please report them to
 http://code.google.com/p/chmsee/issues/entry, thanks.
-
-Help translation
-================
-
-Please view the following site:
-https://translations.launchpad.net/chmsee/trunk/+pots/chmsee
 
 About ChmSee logo
 =================
