@@ -274,7 +274,7 @@ NOTE: If you are viewing a CHM file, you need reopen it after cleaning.</propert
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="setup_close">
-                <property name="label">gtk-close</property>
+                <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
