@@ -1,1 +1,2 @@
-See: http://github.com/lidaobing/chmsee/commits/master
+You can view the most recently git repository commit log at:
+http://github.com/jungleji/chmsee/commits/master
